--- a/timercoldownno5.html
+++ b/timercoldownno5.html
@@ -23,31 +23,28 @@
             margin: 5px;
         }
         .expired {
-            color: red; /* Ganti warna teks menjadi merah */
-            font-weight: bold; /* Membuat teks menjadi tebal */
+            color: red; 
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
     <div class="card shadow-sm p-4" style="width: 300px;">
         <h5 class="card-title text-center">Timer</h5>
-        <div id="timer" class="text-center">5</div>
+        <div id="timer" class="text-center">10</div>
         <div class="d-flex justify-content-center">
             <button id="startBtn" class="btn btn-primary">Mulai</button>
             <button id="stopBtn" class="btn btn-danger" disabled>Berhenti</button>
         </div>
     </div>
-
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script>
-        let timeRemaining = 5; // waktu awal dalam detik
+        let timeRemaining = 10; 
         let timerInterval;
         const timerElement = document.getElementById('timer');
         const startBtn = document.getElementById('startBtn');
         const stopBtn = document.getElementById('stopBtn');
 
         function startTimer() {
-            // Mulai interval timer jika belum ada interval yang berjalan
             if (!timerInterval) {
                 timerInterval = setInterval(updateTimer, 1000);
             }
@@ -78,7 +75,6 @@
 
         startBtn.addEventListener('click', () => {
             if (timerElement.textContent === 'Waktu Habis') {
-                // Jika waktu habis, reset timer ke waktu awal
                 timeRemaining = 5;
                 timerElement.textContent = timeRemaining;
                 timerElement.classList.remove('expired');
